--- a/server/package.json
+++ b/server/package.json
@@ -13,12 +13,18 @@
   "description": "",
   "dependencies": {
     "@types/express": "^4.17.21",
-    "@types/node": "^22.4.2",
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
-    "ts-node": "^10.9.2",
-    "typescript": "^5.5.4"
+    "express-async-handler": "^1.2.0",
+    "pg": "^8.12.0",
+    "reflect-metadata": "^0.2.2",
+    "typeorm": "^0.3.20"
   },
   "devDependencies": {
-    "nodemon": "^3.1.4"
+    "@types/node": "^22.5.0",
+    "@types/pg": "^8.11.6",
+    "nodemon": "^3.1.4",
+    "ts-node": "^10.9.2",
+    "typescript": "^5.5.4"
   }
 }
